# django-auth

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml  requirements.txt
core/: settings.py  urls.py
