[project]
name = "django-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-rest-auth==7.0.1",
    "django==5.1.5",
    "django-allauth==65.3.1",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.4.0",
    "drf-yasg==1.21.8",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
    "requests==2.32.4",
    "whitenoise==6.8.2",
]
